# Distributed-Project

./: CMakeLists.txt  README.md  client.cpp  schema.txt  server.cpp
include/: Client.h  Database.h  Message.h  Server.h  UdpClientSocket.h  UdpServerSocket.h  UdpSocket.h  imageOperations.hpp  serialization.hpp
libs/: base64.cpp
libs/CppSteg/: README.md
libs/CppSteg/include/CppSteg/: LeastBit.hpp
src/: Client.cpp  Database.cpp  Message.cpp  Server.cpp  UdpClientSocket.cpp  UdpServerSocket.cpp  UdpSocket.cpp
